U | blog | add head

--- a/docs/blog/posts/240502.md
+++ b/docs/blog/posts/240502.md
@@ -1,3 +1,10 @@
+---
+draft: false
+date: 2024-05-02
+categories:
+  - diary
+---
+
 # 谢谢您 ReturnZeroGirl
 
 真的很感谢您，帮了我这么多忙，不管是管理服务器这样的大事，还是帮我解决一些常见问题的小事，您真的很尽力。
