--- a/docs/blog/posts/240708.md
+++ b/docs/blog/posts/240708.md
@@ -30,6 +30,6 @@ comments: true
 
 我们经过多次的测试，最终确定仍以官方 BDS 进行开主服，虽然没有了插件功能和反作弊，但这是现在最好的方案
 
-另外，我本人利用自己的废旧电脑开了 ZNK（端口 19131） 和 ZJE（端口 25565） 服，虽然时不时卡，但是也是可以玩的
+另外，我本人利用自己的废旧电脑开了 ZNK（端口 19131） 和 ZJE（端口 25565） 服，虽然时不时卡，但是也是可以玩的（现在已因为无人游玩浪费资源而关闭）
 
 我本人和 ReturnZeroGirl 达成协议，她使用本服务器的 19132 端口开她的互通服务器，ZH-Server（OZB） 使用 19133 进行开服
