--- a/docs/blog/posts/231229.md
+++ b/docs/blog/posts/231229.md
@@ -3,6 +3,8 @@ draft: false
 date: 2023-12-29
 categories:
   - diary
+authors:
+    - FTS427
 ---
 
 # 放假啦
@@ -14,4 +16,3 @@ categories:
 回顾2023年，我已经成长了许多：[MCT](https://github.com/QuantumLS-Studio/MathCentralTool)的创建和调整、Rust和Git以及C#的学习、mkdocs的搭建......
 
 展望2024年，我将参加我人生中第一次的“大考试”、我也需要继续维护我管理和带领的项目，未来一切美好！
-
