--- a/docs/blog/posts/240808.md
+++ b/docs/blog/posts/240808.md
@@ -17,6 +17,10 @@ categories:
 
 我最近在 Arch Linux 中文论坛上注册了一个帐号，可以和其他使用 Arch Linux 的大佬们一起探讨啦～
 
-## 默哀一分钟 ———— RZG 服务器关闭
+## 默哀一分钟 ———— RZG 服务器离开
 
 让我们为开了已经1年的 RZG 服务器默哀一分钟...
+
+### ZH-Server 更改端口号
+
+因为 RZG 服务器的离开， ZH-Server 现在更改端口号为 19132
