F | blog | add metainfo

--- a/docs/blog/posts/240907.md
+++ b/docs/blog/posts/240907.md
@@ -1,3 +1,12 @@
+---
+date: 2024-09-07
+draft: false
+authors:
+    - FTS427
+categories:
+    - diary
+---
+
 # 漯高，启动！
 
 没错，我现在已经是一名一名一名高中生了啊啊啊啊啊！（）
