U | update ZHS info and fix my blog

--- a/docs/blog/posts/250126.md
+++ b/docs/blog/posts/250126.md
@@ -13,7 +13,7 @@ categories:
 
 ## GSI 编译
 
-最近一直在搞支持我的平板的 GSI (PRODUCT_CHARACTOR := tablet) ，但是湿了好多次， CrDroid 是 WebView 打开就爆炸，LineageOS 是可编译但是不可开机(貌似是 SE Policy 冲突导致的)，总之，我放弃了🥲
+最近一直在搞支持我的平板的 GSI (PRODUCT_CHARACTOR := tablet) ，但是试了好多次， CrDroid 是 WebView 打开就爆炸，LineageOS 是可编译但是不可开机(貌似是 SE Policy 冲突导致的)，总之，我放弃了🥲
 
 ## MCLC
 
