--- a/docs/blog/posts/240502.md
+++ b/docs/blog/posts/240502.md
@@ -7,10 +7,10 @@ authors:
     - FTS427
 ---
 
-# 谢谢您，ReturnZeroGirl
+# 谢谢您，Flora
 
-真的很感谢您，帮了我这么多忙，不管是管理服务器这样的大事，还是帮我解决一些常见问题的小事，您真的很尽力。
+真的很感谢您，帮了我这么多忙，不管是管理服务器这样的大事，还是帮我解决一些常见问题的小事，您真的很尽力
 
 您是我在互联网上找到的为数不多的如此热心的网友之一，我该如何回报您呢？如果以金钱衡量，或许会是无穷大。。。
 
-我真的很感谢您，我的好友，ReturnZeroGirl!
+我真的很感谢您，我的好友，Flora!
