--- a/docs/blog/posts/240708.md
+++ b/docs/blog/posts/240708.md
@@ -33,4 +33,4 @@ categories:
 
 另外，我本人利用自己的废旧电脑开了 ZNK（端口 19131） 和 ZJE（端口 25565） 服，虽然时不时卡，但是也是可以玩的（现在已因为无人游玩浪费资源而关闭）
 
-我本人和 Haxon 达成协议，她使用本服务器的 19132 端口开她的互通服务器，ZH-Server（OZB） 使用 19133 进行开服
+我本人和 Luna 达成协议，她使用本服务器的 19132 端口开她的互通服务器，ZH-Server（OZB） 使用 19133 进行开服
