Struct | reorgnize repo struct and fix some words

--- a/docs/blog/posts/240802.md
+++ b/docs/blog/posts/240802.md
@@ -11,7 +11,7 @@ categories:
 
 先放一张效果图
 
-![screenshort](../../assets/my_computer.png)
+![screenshort](../../about_me/my_computer.webp)
 
 主要是对 GTK 和 Qt 程序进行了统一, 当然, Waybar 也进行了改动(虽然还是基于[这个](https://github.com/lokesh-krishna/dotfiles)的改的)
 
