docs: fix numerous formatting mistakes and standardize proper nouns

--- a/docs/blog/posts/231231.md
+++ b/docs/blog/posts/231231.md
@@ -9,12 +9,12 @@ authors:
 
 # 最后一天
 
-今天是2023的最后一天呢，在这里留个纪念～
+今天是 2023 的最后一天呢，在这里留个纪念～
 
 ## 转移工作环境
 
-这两天把我的arch+kde的环境换了，太卡了，换成了i3wm+polybar+alaritty，快了不少
+这两天把我的 Arch + KDE 的环境换了，太卡了，换成了 i3wm + Polybar + Alaritty，快了不少
 
 ## 平板
 
-今天也把损坏的Lenovo平板送去修了，虽说还要等几天才能拿到，但也不错
+今天也把损坏的 Lenovo 平板送去修了，虽说还要等几天才能拿到，但也不错
