--- a/docs/blog/posts/240114.md
+++ b/docs/blog/posts/240114.md
@@ -9,6 +9,6 @@ authors:
 
 # 今天是1月14日（警撅
 
-这一周把MCT逐渐改向国际化了，真的好累。。。
+这一周把 MCT 逐渐改向国际化了，真的好累。。。
 
-平板也拿回来了，真不辍，直接magisk, lsposed嗨起来（
+平板也拿回来了，真不辍，直接 Magisk, LSPosed 嗨起来（
