--- a/docs/blog/posts/240606.md
+++ b/docs/blog/posts/240606.md
@@ -9,10 +9,10 @@ authors:
 
 # 15 Years!
 
-没错，今天，我十五岁啦！几乎是和 Minecraft 一起过生日（我也在5-21成功以 44.5 RMB 买下了正版）
+没错，今天，我十五岁啦！几乎是和 Minecraft 一起过生日（我也在 5-21 成功以 44.5 RMB 买下了正版）
 
 真的很不容易，15年，我身边各样的人，来了又走了，匆匆忙忙，感谢陪伴我一起的每一位！
 
 ## 我已加入 Blessing Studio!
 
-## 时间不早了，今天先写这么多吧，6-22我将迎来我人生中的第一次大型考试--中考
+## 时间不早了，今天先写这么多吧，6-22 我将迎来我人生中的第一次大型考试 —— 中考
