--- a/docs/blog/posts/240722.md
+++ b/docs/blog/posts/240722.md
@@ -23,17 +23,17 @@ RAM: Kingston 16GBx2 4800MHz
 
 硬盘: Lexar 2TB
 
-显卡用的就是核显，显存512MB，可以借助内存进行扩展
+显卡用的就是核显，显存 512 MiB，可以借助内存进行扩展
 
 为什么不买独显？原因就是我发现我能查到的独显大部分都是二手货，不放心，所以选择了后期看情况再买
 
-这台机器就是我的主力机了，装上了 arch + win10 双系统，之前的设备我准备等稳定下来了当服务器用
+这台机器就是我的主力机了，装上了 Arch + Win10 双系统，之前的设备我准备等稳定下来了当服务器用
 
 ## 平板成功刷上了一个 XDA 上大佬的测试版 Lineage OS 17.1 ！
 
 昨天无聊之下，又准备刷机，原因很简单， Google 动态壁纸我没法用，所以下定决心要重新刷一个系统
 
-昨天下午开始，我就开始不停的找包，重启，安装，下载，最后成功在 XDA 上找到了一个大佬制作的 Beta 版的 Lineage OS 17.1 ，编译时间上来看很新 7 月 9 号的包（有一个 7-18的，但是大佬说 Kernel 是损坏的，导致 OOBE 出问题会不停重启）
+昨天下午开始，我就开始不停的找包，重启，安装，下载，最后成功在 XDA 上找到了一个大佬制作的 Beta 版的 Lineage OS 17.1 ，编译时间上来看很新 7 月 9 号的包（有一个7-18的，但是大佬说 kernel 是损坏的，导致 OOBE 出问题会不停重启）
 
 结果经过 5 个多小时的奋战，我放弃了， SP Flash Tool 没法在 Hyprland 下正常运行，我只好重启到了 Win10 上开始把设备回滚至 A10
 
