--- a/docs/blog/posts/240808.md
+++ b/docs/blog/posts/240808.md
@@ -9,7 +9,7 @@ categories:
 
 # 小站大更新
 
-如你所见，这个小站已经换成了新的主题色，我学会了让 MKdocs 使用我自己写的 css 进行显示主题色，挺棒的
+如你所见，这个小站已经换成了新的主题色，我学会了让 MKDocs 使用我自己写的 CSS 进行显示主题色，挺棒的
 
 当然，我也改动了 代码显示、角标、小提示类型，以及让 blog 显示作者等功能，我自己还是很满意的
 
@@ -17,10 +17,10 @@ categories:
 
 我最近在 Arch Linux 中文论坛上注册了一个帐号，可以和其他使用 Arch Linux 的大佬们一起探讨啦～
 
-## 默哀一分钟 ———— RZG 服务器离开
+## 默哀一分钟 —— RZG 服务器离开
 
-让我们为开了已经1年的 RZG 服务器默哀一分钟...
+让我们为开了已经 1 年的 RZG 服务器默哀一分钟...
 
 ### ZH-Server 更改端口号
 
-因为 RZG 服务器的离开， ZH-Server 现在更改端口号为 19132
+因为 RZG 服务器的离开，ZH-Server 现在更改端口号为 19132
