--- a/docs/blog/posts/240816.md
+++ b/docs/blog/posts/240816.md
@@ -13,27 +13,27 @@ categories:
 
 其实整个暑假感觉有点虚度，仅仅只是学了一点 Avalonia 和 Rust，其他的，像 C, Java, Python 几乎没看
 
-但是我学会了自定义我小站通过 css ，我的 AUR 打包技术也有所提升（我接管了 fastgithub-bin 这个包以及重新复活了 sharpcraftlauncher ），我的 Git Action 技术也有所提升（ LL_Easier auto 分支的完善），也学会了自己创建 BtrFS 格式的分区......整体来说，我的实际应用能力有所提升，其他的，也就是稀里糊涂的那么办了（逃
+但是我学会了自定义我小站通过 css ，我的 AUR 打包技术也有所提升（我接管了 fastgithub-bin 这个包以及重新复活了 sharpcraftlauncher ），我的 GitHub Action 技术也有所提升（ LL_Easier auto 分支的完善），也学会了自己创建 Btrfs 格式的分区......整体来说，我的实际应用能力有所提升，其他的，也就是稀里糊涂的那么办了（逃
 
 明天就要去军训了，总共10天（估计），哎。。。说实话，不是很想去（大脑：再不出去就懒死在家里了）
 
 ## 社区赢啦
 
-通过几次会议， Mojang 同意了保留 pdb ，但是不开放 pdb ，必须要签署协议后才能拿到 pdb ，算是一个两边都让了一步的方案
+通过几次会议， Mojang 同意了保留 PDB ，但是不开放 PDB ，必须要签署协议后才能拿到 PDB ，算是一个两边都让了一步的方案
 
-但是现在， BDS 1.21.30.01 都已经出了，可是 pdb 还是没有拿到手里，原因是 Mojang 在度假，说实话我个人认为 Mojang 这个 “度假” 是比较可疑的，但是这只是我个人想法
+但是现在， BDS 1.21.30.01 都已经出了，可是 PDB 还是没有拿到手里，原因是 Mojang 在度假，说实话我个人认为 Mojang 这个 “度假” 是比较可疑的，但是这只是我个人想法
 
 LL 现在已经开始了对客户端的 Modding ，还是很期待的，在群聊里甚至有人说 “LL 是未来基岩版的 Fabric” ，我认为这也是有可能的
 
 ## ZH-Server 调整
 
-没错， ZH-Server 又开始了调整，这次的调整是加入了 Endstone 的插件框架支持（主要是 LiteDev 开发者认为 Linux 下的注入，插件迁移比较难以实现，一时半会很难实现对 Linux 的支持），虽然 Endstone 是一个正在发展的新兴项目，但是我感觉应该也是可以赶上 LL 的，毕竟还跨平台，支持 Python 和 C++ ，SAPI / NodeJS 根据一个 Discussion 应该也会有支持
+没错，ZH-Server 又开始了调整，这次的调整是加入了 Endstone 的插件框架支持（主要是 LiteDev 开发者认为 Linux 下的注入，插件迁移比较难以实现，一时半会很难实现对 Linux 的支持），虽然 Endstone 是一个正在发展的新兴项目，但是我感觉应该也是可以赶上 LL 的，毕竟还跨平台，支持 Python 和 C++, SAPI / NodeJS 根据一个 Discussion 应该也会有支持
 
 总之，现在服务器也是支持了插件，期待~
 
 ## 人人生而平等
 
-我在 [关于我](../../about_me/about_me.md) 里已经提到：我本人不属于 彩旗群体(LGBTQ+) ，但是我尊重 ta 们
+我在 [关于我](../../about_me/about_me.md) 里已经提到：我本人不属于 彩旗群体（LGBTQ+），但是我尊重 ta 们
 
 我对这个群体其实持中立态度，但是我希望社会能平等的对待这个群体，即使 ta 们的理念与 “传统观念” 不一致
 
