--- a/docs/blog/posts/250105.md
+++ b/docs/blog/posts/250105.md
@@ -13,7 +13,7 @@ categories:
 
 ## calc_cpp
 
-如你所见，我最近开了一个 C++ 小项目 -- calc_cpp ，用 C++ 写了一个小计算器，通过参数传递进行计算，其实主要目的是用来提升我对 C++, CMake, Make, Clang 技巧的
+如你所见，我最近开了一个 C++ 小项目 —— calc_cpp ，用 C++ 写了一个小计算器，通过参数传递进行计算，其实主要目的是用来提升我对 C++, CMake, Make, Clang 技巧的
 
 ## LL 复活啦
 
