--- a/docs/blog/posts/250223.md
+++ b/docs/blog/posts/250223.md
@@ -33,7 +33,7 @@ categories:
 
 在经过一月和二月的 SPL 更新以及前几天的一个 hotfix 版本之后，平板的性能明显提升，虽然耗电量确实也有提升(
 
-现在平板可以用自己编译的内核啦，已经完全摆脱原厂的束缚，根据维护者在 tg 的话，这个板子估计在三月份能跑上 LineageOS 21 ，在整个系统都可以稳定无误的运行之后会直接推给 LineageOS 官方，估计暑假能完成(？)，总之我很期待
+现在平板可以用自己编译的内核啦，已经完全摆脱原厂的束缚，根据维护者在 TG 的话，这个板子估计在三月份能跑上 LineageOS 21 ，在整个系统都可以稳定无误的运行之后会直接推给 LineageOS 官方，估计暑假能完成(？)，总之我很期待
 
 ## Dhizuku
 
