--- a/docs/blog/posts/250302.md
+++ b/docs/blog/posts/250302.md
@@ -13,7 +13,7 @@ categories:
 
 因为已经很流畅了，我也就没有再刷 Magisk 或者 KSU 一类的，仅仅是装了个 Dhizuku
 
-LineageOS 21 的 Gallary 相册应用也是特大更新，真的，超级好用啊啊啊
+LineageOS 21 的 Gallery 相册应用也是特大更新，真的，超级好用啊啊啊
 
 维护者正在考虑让这个板子吃上 LineageOS 22.1 和 23 的事，期待一下
 
