--- a/docs/blog/posts/250418.md
+++ b/docs/blog/posts/250418.md
@@ -21,12 +21,12 @@ categories:
 
 最近用 C++ 写了不少 toys ，把 C++ 给复习了一遍，感觉良好
 
-也在看 rust ，可能接下来我会用 rust 写一些小玩意玩玩
+也在看 Rust ，可能接下来我会用 Rust 写一些小玩意玩玩
 
-html, js 等网页方面的技术有所增加
+HTML, JS 等网页方面的技术有所增加
 
 ## ZH-Server
 
-因为我的个人缘故，前一段时间服务器爆了一回，出于各种原因，最终没有开新存档，而是选择了 V 存档还原
+因为我的个人缘故，前一段时间服务器爆了一回，出于各种原因，最终没有开新存档，而是选择了 V存档还原
 
 并且我把服务器的系统直接从 Debian 换到了 openSUSE Leap ，感觉还不错
