--- a/docs/blog/posts/231229.md
+++ b/docs/blog/posts/231229.md
@@ -9,10 +9,10 @@ authors:
 
 # 放假啦
 
-2024的脚步正在向我们靠近，今天是2023年的12月29日，令人激动！
+2024的脚步正在向我们靠近，今天是 2023 年的 12 月 29 日，令人激动！
 
-（这一次三中竟然放了整整3天，震惊🤯）
+（这一次三中竟然放了整整 3 天，震惊🤯）
 
-回顾2023年，我已经成长了许多：[MCT](https://github.com/QuantumLS-Studio/MathCentralTool)的创建和调整、Rust和Git以及C#的学习、mkdocs的搭建......
+回顾 2023 年，我已经成长了许多：[MCT](https://github.com/QuantumLS-Studio/MathCentralTool)的创建和调整、Rust 和 Git 以及 C# 的学习、MKDocs 的搭建......
 
-展望2024年，我将参加我人生中第一次的“大考试”、我也需要继续维护我管理和带领的项目，未来一切美好！
+展望 2024 年，我将参加我人生中第一次的“大考试”、我也需要继续维护我管理和带领的项目，未来一切美好！
