--- a/docs/blog/posts/240907.md
+++ b/docs/blog/posts/240907.md
@@ -13,7 +13,7 @@ categories:
 
 总体来说，还好吧，和三中初三的节奏差不多，不过每天 5:30 起，10:00 到家，真的很累，每周还有周测，讲课速度也是很快（毕竟那么一厚本呢）
 
-不过有计算机课，教的是 Python ，但是 Windows7 32bit + i5 5600 + 4G RAM 这。。。不评价，但是，但是，但是你写 Py 连个 IDE 都不装我算佩服，高二上学期还有计算机考试，这绝对满分的好吧
+不过有计算机课，教的是 Python ，但是 Windows 7 32-bit + i5-5600 + 4 GiB RAM 这。。。不评价，但是，但是，但是你写 Py 连个 IDE 都不装我算佩服，高二上学期还有计算机考试，这绝对满分的好吧
 
 ## 漂亮的 BDS 跨平台插件框架 —— Endstone
 
@@ -23,4 +23,4 @@ categories:
 
 现在 ZH-Server 已经开始使用 Endstone 插件框架，目前感觉非常好，就是我还不太会写插件，我准备写一个类似 LL 的 AddonManager 的东西方便安装资源包，也在想专门写一个适用于 Endstone 的面板。可惜，我的 Python 几乎一窍不通，C++ 也快忘完了，并且时间不够，所以就先搁置一段时间吧。。。
 
-Endstone 唯一有一点就是借用 pip ，python 的 venv 时好时坏，有时候明明用了 venv ，pip 还说无法安装，不过能用就行了，总比 LL 目前还不支持 Linux 好吧（）
+Endstone 唯一有一点就是借用 pip ，Python 的 venv 时好时坏，有时候明明用了 venv ，pip 还说无法安装，不过能用就行了，总比 LL 目前还不支持 Linux 好吧（）
