--- a/docs/blog/posts/250126.md
+++ b/docs/blog/posts/250126.md
@@ -13,7 +13,7 @@ categories:
 
 ## GSI 编译
 
-最近一直在搞支持我的平板的 GSI (PRODUCT_CHARACTOR := tablet) ，但是试了好多次， CrDroid 是 WebView 打开就爆炸，LineageOS 是可编译但是不可开机(貌似是 SE Policy 冲突导致的)，总之，我放弃了🥲
+最近一直在搞支持我的平板的 GSI (PRODUCT_CHARACTOR := tablet) ，但是试了好多次， CrDroid 是 WebView 打开就爆炸，LineageOS 是可编译但是不可开机（貌似是 SE Policy 冲突导致的），总之，我放弃了🥲
 
 ## MCLC
 
@@ -25,7 +25,7 @@ categories:
 
 ## Nextcloud
 
-最近在重新搭建 `家里云` 服务，在我的 Arch Linux 上，但是根据 Arch wiki 中 Nextcloud 一章的内容，我并未成功让 Nextcloud 运行，有空了解决一下
+最近在重新搭建 `家里云` 服务，在我的 Arch Linux 上，但是根据 Arch Wiki 中 Nextcloud 一章的内容，我并未成功让 Nextcloud 运行，有空了解决一下
 
 ## 我不是南凉😡
 
