--- a/docs/blog/posts/250609.md
+++ b/docs/blog/posts/250609.md
@@ -13,15 +13,15 @@ categories:
 
 ## OPPO A31t, 复活！
 
-现在手里有个 OPPO A31t，刷了个 Cyanogenmod 12.1 但是特别不好用，时不时没法从关机状态正常启动，还有一些内置的别的软件，不是很喜欢，所以打算自己编译一下这个设备的 kernel 和系统
+现在手里有个 OPPO A31t，刷了个 CyanogenMod 12.1 但是特别不好用，时不时没法从关机状态正常启动，还有一些内置的别的软件，不是很喜欢，所以打算自己编译一下这个设备的 kernel 和系统
 
 目前的一些进度：
 
 目前浅浅试着去适配了一下 lk2nd，但是刷入 boot 分区会不停重启，刷入 aboot 没反应，暂且放一放吧（
 
-kernel 编译中有个和 oppo 充电有关的报错，感觉快了
+kernel 编译中有个和 OPPO 充电有关的报错，感觉快了
 
-Cyanogenmod 12.1 的 device tree 大概写了个框架，好多具体内容还没写
+Cyanogenmod 12.1 的 Device Tree 大概写了个框架，好多具体内容还没写
 
 TWRP 中间编译过程中莫名出现报错，似乎是 TWRP 自己源码的问题
 
